# textvision

./: README.org  pyproject.toml
textvision/: detectors.py
