[tool.poetry]
name = "textvision"
version = "0.1.0"
description = "textvision uses the Google Vision API to perform OCR and return text."
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-vision = "^2.3.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
textvision = 'textvision.detectors:detect'
